Desenvolve funcionalidades de editar pessoa, consulta pessoa, listar pessoa, adicionar endereco, listar enderecos da pessoa e buscar endereco principal

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+spring.main.allow-circular-references=true
+spring.jpa.show-sql=true
